Fix comments displaying when recipe is too short. Add voting SVGs.

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -220,11 +220,20 @@ h1.jumbo span{
 	overflow: hidden;
 }
 
+.voting {
+	position: relative;
+	top: -42px;
+}
 
+.thumb {
+	float: left;
+	width: 65px;
+}
 
-
-
-
+.thumb-down {
+	float: right;
+	width: 65px;
+}
 
 /*Profile*/
 
@@ -252,6 +261,7 @@ hr.hidden{
 }
 
 .all-comments {
+	clear: both;
 	padding-top: 20px;
 }
 
